Bug 325026 - If log library is missing Text-ui doesn't display messages
Summary: If log library is missing Text-ui doesn't display messages
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-18 03:30 UTC by David Edmundson
Modified: 2013-09-18 09:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-09-18 03:30:22 UTC
User below missing the ktp-tp-logger plugin. 

[04:24] <ryukafalz> Yeah.  Window opens, header (avatar, contact name, etc.) displays, but the chat message doesn't.  Icon in taskbar stays as the "new message" icon
[04:24] <ryukafalz> and notification displays again when the window closes

I assume text-ui is waiting on pendingDates to emit finished() or something, but the code looks fine.

Note I have not confirmed this bug.
Comment 1 Daniel Vrátil 2013-09-18 09:13:59 UTC
Git commit 4c0ed98da330687d644f90ae6294825398e70709 by Dan Vrátil.
Committed on 18/09/2013 at 09:13.
Pushed by dvratil into branch 'master'.

Delay emitting finished() signal from PendingLoggerOperations

When the signal is emitted directly from operation constructor, it
is never caught, because users connect to the signal after the Operation
is constructed.

REVIEW: 112790
FIXED-IN: 0.7.0

M  +22   -3    KTp/Logger/pending-logger-operation.cpp
M  +2    -0    KTp/Logger/pending-logger-operation.h

http://commits.kde.org/telepathy-common-internals/4c0ed98da330687d644f90ae6294825398e70709