Delay emitting finished() signal from PendingLoggerOperations

When the signal is emitted directly from operation constructor, it
is never caught, because users connect to the signal after the Operation
is constructed.

REVIEW: 112790
FIXED-IN: 0.7.0
BUG: 325026